html initial cleaning code

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <title>NTF card</title>
 </head>
 <body>
-<div id="card">
+<main id="card">
 		<div id="main-pic">
 			<div id="main-pic-rollover"></div>
 		</div>
-  <div id="ntf-name">Equilibrium #3429</div>
+  <div id="ntf-name"><h1>Equilibrium #3429</h1></div>
   <div id="ntf-description">Our Equilibrium collection promotes balance and calm.</div>
   <div id="ntf-values">
 	  <div id="value"><img src="images/icon-ethereum.svg" alt=""/>&nbsp;&nbsp;0.041 ETH</div>
@@ -24,6 +24,6 @@
 			<div id="author-creation">Creation of</div>
 			<div id="author-name">&nbsp;Jules Wyvern</div>
 		</div>
-</div>
+</main>
 </body>
 </html>
