--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
+	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
-<title>NTF card</title>
+	<title>NTF card</title>
 </head>
+
 <body>
-<main id="card">
+	<main>
 		<div id="main-pic">
 			<div id="main-pic-rollover"></div>
 		</div>
-  <div id="ntf-name"><h1>Equilibrium #3429</h1></div>
-  <div id="ntf-description">Our Equilibrium collection promotes balance and calm.</div>
-  <div id="ntf-values">
-	  <div id="value"><img src="images/icon-ethereum.svg" alt=""/>&nbsp;&nbsp;0.041 ETH</div>
-		<div id="time-left"><img src="images/icon-clock.svg" alt=""/>&nbsp;&nbsp;3 days left</div>
+		<div id="ntf-name">
+			<h1>Equilibrium #3429</h1>
+		</div>
+		<div id="ntf-description">Our Equilibrium collection promotes balance and calm.</div>
+		<div id="ntf-values">
+			<div id="value">
+				<img src="images/icon-ethereum.svg" alt="" />
+				<div class="valueText">0.041 ETH</div>
+			</div>
+			<div id="time-left">
+				<img src="images/icon-clock.svg" alt="" />
+				<div class="valueText">3 days left</div>
+			</div>
 		</div>
 		<div id="author">
 			<div id="author-pic"></div>
 			<div id="author-creation">Creation of</div>
-			<div id="author-name">&nbsp;Jules Wyvern</div>
+			<div id="author-name">Jules Wyvern</div>
 		</div>
-</main>
+	</main>
 </body>
+
 </html>
